# OS

./: README.md
1_lab/: CMakeLists.txt  a.out  main.cpp  test.txt
1_lab/doc/: report1.odt
2_lab/: .~lock.report2.docx#  a.out  main.cpp  report2.docx
2_lab/doc/: report2.docx  report2.odt
2_lab/src/: CMakeLists.txt  a.out  main.cpp
3_lab/: main.c
3_lab/doc/: report3.odt
3_lab/src/: CMakeLists.txt  main.c
4_lab/doc/: report4.odt
4_lab/src/: 4_lab_child_0  4_lab_child_1  CMakeLists.txt  a.out  child_0.c  child_1.c  main.c  shrmem.h  test.txt  test2.txt  text.txt
5_lab/doc/: report5.odt
5_lab/src/: CMakeLists.txt  FirstRealization.c  FirstStatic  SecondRealization.c  SecondStatic  dynamic  dynamic_main.c  realization.h  static_main.c
6-8_lab/: CMakeLists.txt  calculation_node.cpp  control_node.cpp  my_zmq.h  topology.h  zmq.h
6-8_lab/doc/: report6.odt
6-8_lab/src/: CMakeCache.txt  CMakeLists.txt  Makefile  calculation_node  calculation_node.cpp  cmake_install.cmake  control  control_node.cpp  my_zmq.h  test  topology.h
KP/doc/: reportKP.odt
KP/src/: client.cpp  funcs.hpp  functions.h  server.cpp
